<resources>
    <string name="app_name">SchoolApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Personal Data</string>
    <string name="menu_gallery">Notice Board</string>
    <string name="menu_slideshow">Event</string>
    <string name="menu_tools">Setting</string>
    <string name="menu_share">Do u wanna log out?</string>
    <string name="menu_send">Send</string>
    <string name="university_of_southampton">University of Southampton</string>
    <string name="id">ID：</string>
    <string name="password">Password：</string>
    <string name="log_in">Log in</string>
    <string name="student">Student</string>
    <string name="soton">soton</string>
    <string name="sign_up">Sign Up</string>
    <string name="parents">Parents</string>
    <string name="please_input_password">Please Input Password</string>
    <string name="please_input_id">Please Input ID</string>
    <string name="personal_data">Personal Data</string>
    <string name="email_address">Email Address</string>
    <string name="parent_contact_number">Parent Contact Number</string>
    <string name="family_name">Family Name</string>
    <string name="year_class_group">Year Class/Group</string>
    <string name="student_data">Student Data</string>
    <string name="first_name">First Name</string>
    <string name="student_name">Student Name</string>
    <string name="student_email">Student Email</string>
    <string name="name">Name</string>


    <string name="user">User</string>
    <string name="register">Register</string>

    <string name="photo">Photo</string>

    <string name="textview">TextView</string>

    <string name="please_input_email">Please input Email</string>
    <string name="group">Class</string>
    <string name="group1">Group</string>
    <string name="passwords">password</string>
    <string name="admin">Admin</string>
    <string name="email">Email</string>
    <string name="password1">Password</string>
    <string name="class1">Class</string>
    <string name="password2">Password</string>
    <string name="user1">User</string>
    <string name="photo1">Photo</string>
    <string name="email1">Email</string>
    <string name="yes">Yes</string>
    <string name="no_i_wanna_stay">No, I wanna Stay</string>
    <string name="query_text">The query content is empty</string>
    <string name="query_all">Query All</string>
    <string name="clear_query">clear query</string>
    <string name="title_activity_main_parent">MainActivity_Parent</string>
    <string name="bind_student_information">Bind student information</string>
    <string name="send">Send</string>
    <string name="content">Content</string>
    <string name="short_description">Short Description</string>
</resources>
