<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_personaldata">

    <fragment
        android:id="@+id/nav_personaldata"
        android:name="com.example.schoolapp.ui_student.personaldata.PersonaldataFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_personaldata_student" />

    <fragment
        android:id="@+id/nav_noticeboard"
        android:name="com.example.schoolapp.ui_student.noticeboard.NoticeboardFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_noticeboard" />

    <fragment
        android:id="@+id/nav_event"
        android:name="com.example.schoolapp.ui_student.event.EventFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_event_student" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.schoolapp.ui_student.setting.SettingFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_setting_student" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.schoolapp.ui_student.logout.LogoutFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_logout_student" />
</navigation>


