<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="-7dp"
    tools:layout_editor_absoluteY="43dp">

    <TextView
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginBottom="28dp"
        android:text="@string/email_address"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4" />

    <TextView
        android:id="@+id/number"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="88dp"
        android:text="@string/parent_contact_number"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5" />

    <TextView
        android:id="@+id/familyname"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginBottom="28dp"
        android:text="@string/family_name"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/firstname" />

    <ImageView
        android:id="@+id/studentphoto"
        android:layout_width="112dp"
        android:layout_height="119dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/soton"
        app:layout_constraintBottom_toTopOf="@+id/firstname"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/soton" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firstname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/familyname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="57dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/familyname"
        app:layout_constraintEnd_toStartOf="@+id/firstname"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/firstname"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_person_black_24dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="57dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/email"
        app:layout_constraintEnd_toStartOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/email"
        app:srcCompat="@drawable/ic_email_black_24dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="57dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/number"
        app:layout_constraintEnd_toStartOf="@+id/number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/number"
        app:srcCompat="@drawable/ic_phone_black_24dp" />

    <TextView
        android:id="@+id/IDENTITY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="45dp"
        android:text="Identity:"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/ROLE"
        app:layout_constraintEnd_toStartOf="@+id/ROLE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ROLE"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ROLE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="26dp"
        android:text="Role"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/firstname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/IDENTITY"
        app:layout_constraintTop_toBottomOf="@+id/studentphoto" />

</androidx.constraintlayout.widget.ConstraintLayout>